...
    final interfaceSettings = ref.watch(interfaceSettingsProvider);

    final style = Theme.of(
      context,
    ).textTheme.titleLarge?.copyWith(color: TEXT_PRIMARY);
    return ListView(
      key: const ValueKey<String>('settings.list'),
      padding: const EdgeInsets.all(kAppSpace16),
      physics: const ClampingScrollPhysics(),
      children: [
        SettingsSection(
          headerKey: const ValueKey<String>('settings.general.section'),
          bodyKey: const ValueKey<String>('settings.general.body'),
          title: Text(l10n.generalHeader, style: style),
          child: const GeneralSettings(),
        ),
        const SizedBox(height: kAppSpace16),
        SettingsSection(
...
