...
          page: const CalculatorPage(),
          title: l10n.calculatorAppBarTitle,
          actions: [HeaderActions(showGcodeAction: showGcodeAction)],
          navigationItem: BottomNavigationBarItem(
            icon: const Icon(
              Icons.calculate,
              key: ValueKey<String>('nav.calculator.button'),
            ),
            label: l10n.calculatorNavLabel,
          ),
        );
      case AppPageTab.materials:
        return AppPageShellTab(
...
          page: const SettingsPage(),
          title: l10n.settingsAppBarTitle,
          actions: const [],
          navigationItem: BottomNavigationBarItem(
            icon: const Icon(
              Icons.settings,
              key: ValueKey<String>('nav.settings.button'),
            ),
            label: l10n.settingsNavLabel,
          ),
        );
    }
  }
...
